--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,8 @@
             </resource>
         </resources>
 
+        <defaultGoal>clean package -Dmaven.javadoc.skip=true</defaultGoal>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -87,9 +89,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.0</version>
-                <configuration>
-                    <outputDirectory>C:\Users\pc\Desktop\1.18 Sunucu\plugins</outputDirectory>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <outputDirectory>C:\Users\pc\Desktop\1.18 Sunucu\plugins</outputDirectory>-->
+<!--                </configuration>-->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -105,7 +107,7 @@
                             <relocations>
                                 <relocation>
                                     <pattern>org.bstats</pattern>
-                                    <shadedPattern>me.despical.throwableitems.util</shadedPattern>
+                                    <shadedPattern>me.despical.pixelpainter.util</shadedPattern>
                                 </relocation>
                             </relocations>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
