--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.despical</groupId>
     <artifactId>pixel-painter</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3</version>
 
     <properties>
         <java.version>1.8</java.version>
@@ -89,9 +89,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.0</version>
-<!--                <configuration>-->
-<!--                    <outputDirectory>C:\Users\pc\Desktop\1.18 Sunucu\plugins</outputDirectory>-->
-<!--                </configuration>-->
+                <configuration>
+                    <outputDirectory>C:\Users\pc\Desktop\1.18 Sunucu\plugins</outputDirectory>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
